--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "browser": "dist/bundle.browser.es5.js",
-  "types": "dist/browser/src/platforms/browser",
+  "types": "dist/browser/src",
   "scripts": {
     "wasm": "rimraf ./dist/transpile/wasm && node ./dist/transpile/build/wasm-build.js",
     "wasm-test": "rimraf ./dist/transpile/wasm && node ./dist/transpile/build/wasm-build.js --test",
