Renamed library to ring-crypto.  Removed all traces of "actor".

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@actor/crypto",
+  "name": "ring-crypto",
   "version": "1.0.0",
   "description": "",
   "browser": "dist/bundle.browser.es5.js",
